--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,6 +5,12 @@
     android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
+        android:text="ID:"
+        android:id="@+id/et_id"
+        android:textSize="18sp"
+        android:layout_margin="05dp"
+        android:layout_height="wrap_content"/><TextView
+        android:layout_width="match_parent"
         android:text="Name:"
         android:id="@+id/et_name"
         android:textSize="18sp"
